MilestoneRFA_CM01/src/objects/CM_FinalApprovalMailGroupMember__c.object
<CustomObject>
    <fields>
        <fullName>CM_FinalApprovalMailGroup__c</fullName>
        <label>最終承認メール送信グループ</label>
        <referenceTo>CM_FinalApprovalMailGroup__c</referenceTo>
        <relationshipLabel>最終承認メール送信グループメンバー</relationshipLabel>
        <relationshipName>CM_Group_Member_User_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Group_Member_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_mail__c</fullName>
        <formula>CM_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メールアドレス</label>
        <type>Text</type>
    </fields>
    <label>最終承認メール送信グループメンバー</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Member管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>